swagger personnels
